---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 28. 02. 2019
  Features:
    - Examples of literal-value and variable expressions
